--- a/src/DataPreparation/Dataset description.ipynb
+++ b/src/DataPreparation/Dataset description.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f_ecg = \"C:/Users/Bin/Documents/Datasets/time series/UCR_TS_Archive_2015/UCR_TS_Archive_2015/ECG200/ECG200_TRAIN\"\n",
@@ -63,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = ecg.iloc[0,1:]\n",
@@ -131,7 +135,9 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "label[label!=5] = \"normal\"\n",
@@ -141,7 +147,9 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.reset_index(drop=True,inplace=True)\n",
@@ -822,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -834,13 +842,276 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(581012, 55)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forest = pd.read_csv(f_forest_,header=None)\n",
+    "forest.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>45</th>\n",
+       "      <th>46</th>\n",
+       "      <th>47</th>\n",
+       "      <th>48</th>\n",
+       "      <th>49</th>\n",
+       "      <th>50</th>\n",
+       "      <th>51</th>\n",
+       "      <th>52</th>\n",
+       "      <th>53</th>\n",
+       "      <th>54</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2596</td>\n",
+       "      <td>51</td>\n",
+       "      <td>3</td>\n",
+       "      <td>258</td>\n",
+       "      <td>0</td>\n",
+       "      <td>510</td>\n",
+       "      <td>221</td>\n",
+       "      <td>232</td>\n",
+       "      <td>148</td>\n",
+       "      <td>6279</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2590</td>\n",
+       "      <td>56</td>\n",
+       "      <td>2</td>\n",
+       "      <td>212</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>390</td>\n",
+       "      <td>220</td>\n",
+       "      <td>235</td>\n",
+       "      <td>151</td>\n",
+       "      <td>6225</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2804</td>\n",
+       "      <td>139</td>\n",
+       "      <td>9</td>\n",
+       "      <td>268</td>\n",
+       "      <td>65</td>\n",
+       "      <td>3180</td>\n",
+       "      <td>234</td>\n",
+       "      <td>238</td>\n",
+       "      <td>135</td>\n",
+       "      <td>6121</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2785</td>\n",
+       "      <td>155</td>\n",
+       "      <td>18</td>\n",
+       "      <td>242</td>\n",
+       "      <td>118</td>\n",
+       "      <td>3090</td>\n",
+       "      <td>238</td>\n",
+       "      <td>238</td>\n",
+       "      <td>122</td>\n",
+       "      <td>6211</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2595</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2</td>\n",
+       "      <td>153</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>391</td>\n",
+       "      <td>220</td>\n",
+       "      <td>234</td>\n",
+       "      <td>150</td>\n",
+       "      <td>6172</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 55 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0    1   2    3    4     5    6    7    8     9  ...  45  46  47  48  49  \\\n",
+       "0  2596   51   3  258    0   510  221  232  148  6279 ...   0   0   0   0   0   \n",
+       "1  2590   56   2  212   -6   390  220  235  151  6225 ...   0   0   0   0   0   \n",
+       "2  2804  139   9  268   65  3180  234  238  135  6121 ...   0   0   0   0   0   \n",
+       "3  2785  155  18  242  118  3090  238  238  122  6211 ...   0   0   0   0   0   \n",
+       "4  2595   45   2  153   -1   391  220  234  150  6172 ...   0   0   0   0   0   \n",
+       "\n",
+       "   50  51  52  53  54  \n",
+       "0   0   0   0   0   5  \n",
+       "1   0   0   0   0   5  \n",
+       "2   0   0   0   0   2  \n",
+       "3   0   0   0   0   2  \n",
+       "4   0   0   0   0   5  \n",
+       "\n",
+       "[5 rows x 55 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forest.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2eb9e932860>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAY0AAAD8CAYAAACLrvgBAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAHL9JREFUeJzt3XuQnXWd5/H35/QlCbdcO0zMxQRo\nRyIihGxIocU4MEJgpyY4A1VxnSG6qQ1lQalb7paotQUjUqW7o5RsIbU4ZA2MGhF1SM3EjVlkSnHl\n0lEuCTGmDQSaxKRzJQGSdJ/z3T/Or9Mnzenup7tPcrrP+byqTp3nfJ/fc/n16TqfPs/vefpRRGBm\nZpZFrto7YGZmY4dDw8zMMnNomJlZZg4NMzPLzKFhZmaZOTTMzCwzh4aZmWXm0DAzs8wcGmZmlllj\ntXeg0qZNmxZz586t9m6YmY0pGzdu3BsRLYO1q7nQmDt3Lm1tbdXeDTOzMUXSjiztfHjKzMwyc2iY\nmVlmDg0zM8vMoWFmZpk5NMzMLDOHhpmZZebQMDOzzBwaZmZ17us/25q5rUPDzKyO7dj3Jv/z5+2Z\n2w8aGpLGS3pG0vOSNkv6+1SfJ+lpSdsk/UBSc6qPS6/b0/y5Jev6QqpvlXRtSX1JqrVLur2kXnYb\nZmZWGVt2HR5S+yzfNI4BV0XEB4BLgCWSFgNfA+6JiFbgALAitV8BHIiIC4B7UjskzQeWAe8DlgDf\nktQgqQG4D7gOmA98LLVlgG2YmVkF7Dr09pDaDxoaUXQkvWxKjwCuAh5N9dXADWl6aXpNmn+1JKX6\nmog4FhEvA+3AovRoj4jtEXEcWAMsTcv0tw0zMxuhrnyBRzd2MOXM7AdxMo1ppG8EzwF7gA3AH4CD\nEdGdmnQAM9P0TOA1gDT/EDC1tN5nmf7qUwfYhpmZjUBE8PF/fJrNO9/guov+JPNymUIjIvIRcQkw\ni+I3gwvLNUvP6mdepervIGmlpDZJbZ2dneWamJlZiRc6DvHMy/tZ8aF5fHnpRZmXG9LZUxFxEPg3\nYDEwSVLPv1afBexM0x3AbIA0fyKwv7TeZ5n+6nsH2Ebf/XogIhZGxMKWlkH/HbyZWd17+KkdjGvM\n8emrW2nIlfsbvbwsZ0+1SJqUpicAfwFsAZ4AbkzNlgOPpem16TVp/s8jIlJ9WTq7ah7QCjwDPAu0\npjOlmikOlq9Ny/S3DTMzG6ZNrx/i0Y0d/OXF72LihKYhLZvlJkwzgNXpLKcc8EhE/Iukl4A1kr4C\n/BZ4MLV/EHhYUjvFbxjLACJis6RHgJeAbuDWiMgDSLoNWA80AKsiYnNa1+f72YaZmQ3TfU+009yY\n44vXv3fIy6r4B33tWLhwYfjOfWZm5XXnC1x61waueu90vrns0hN1SRsjYuFgy/uKcDOzOvHG0S6W\n/+9nOHy0m7+8+F3DWodDw8ysTvz92pf4Vfs+PjL/XP7iwunDWkeWMQ0zMxvDIoIftnXwo990cONl\ns/iHmz4w7HU5NMzMalhXvsB13/wl7XuOcF7LmXzp+nKX2WXn0DAzq0HHuwt8+5fbWfXky+x78zhX\nnD+Vb318AZPOGNn/fXVomJnVkOPdBf7pqR38j/VbebsrT3NDjrs/ehEfv/zdFVm/Q8PMrEase3EX\n/+2fN7HvzeMA3HXDRXx80RxyQ7jiezAODTOzMe6X2zq574l2ntq+H4Cv/c37+esFs2hqqPwJsg4N\nM7MxJiLY9+ZxftW+l59t3s2/vriLaWc18/HL53DLleczZ+oZp2zbDg0zszHit68e4LHndvJk+17a\n9xRvc9Ry9jj+w+Vz+Py172XiGUP7P1LD4dAwMxvFfv2HfWx4aTdPtnfy+93FoPjA7El8+qoLuHjW\nJP78vdOH9F9qR8qhYWY2yux/8zjf+X+v8P1nXqXz8DEALpxxDv/12j/lrxfMZMbECVXbN4eGmVmV\nHe8u8Pvdh9nw0m7+besenu84dGLep69u5RNXzB3SLVlPJYeGmdlptPPg23QePsZzrx3kd398g9++\nepBX97/FW8fzAMydegZ/u3gOH37P9NN+6CkLh4aZ2Slw6O0utu0+zO93H2F75xE2vnqAXQeP8sc3\njp5o09yQ4+JZE/n375/BZe+ezGXvnkzruWdXca8H59AwM6uQV/a+ySNtr/HTTX/k5b1vnjTvXRPH\ns/i8KcyYNIHL5kxmylnNXDp7EtLo+iYxGIeGmdkwHO3Ks3nnG7zQcZBDb3fxq/a9PPvKAaA4aP2J\nK+Zy2bsnM2vyBC6eNWnUHWYaLoeGmdkAuvMF9h45zsYdB2jbsZ9nXt7P3iPH2HvkOPlC751Pzx7f\nyN8unsMnrpjHBdPPquIen1oODTOzEoVC8GT7Xh769Q7+0HnkHYeZzm85kytbWzhrfCMXzjiH98+c\nyAXTzzol/7JjNHJomJlRvBXqP6zfyk9+8zqHj3UD8IFZE7nlyvOYelYz7zn3bOa/6xymnz2+ynta\nXQ4NM6trG3cc4FP/tJE96SK6cY05PnN1Kx+Zfy4XzZxY5b0bfRwaZla3frSxg8/98HkAPnTBNJZf\nMZcr3zONcY0NVd6z0cuhYWZ16e5/fYlv//Jlxjfl+OEtV/D+Wf5WkYVDw8zqSkTwpX/exPeefhWA\ntbd9iPeM8gvqRpNBh/slzZb0hKQtkjZL+kyq3ynpdUnPpcf1Jct8QVK7pK2Sri2pL0m1dkm3l9Tn\nSXpa0jZJP5DUnOrj0uv2NH9uJTtvZvXnf/1iO997+lVap5/F7+5a4sAYoizniHUDn4uIC4HFwK2S\n5qd590TEJemxDiDNWwa8D1gCfEtSg6QG4D7gOmA+8LGS9XwtrasVOACsSPUVwIGIuAC4J7UzMxu2\ntlcO0NyY42f/+UrGN3nsYqgGDY2I2BURv0nTh4EtwMwBFlkKrImIYxHxMtAOLEqP9ojYHhHHgTXA\nUhWvob8KeDQtvxq4oWRdq9P0o8DVGmvX3JvZqLL3yDH+3dzJY+7fd4wWQ7oaJR0euhR4OpVuk/SC\npFWSJqfaTOC1ksU6Uq2/+lTgYER096mftK40/1Bq33e/Vkpqk9TW2dk5lC6ZWZ3Zse9N5kw5s9q7\nMWZlDg1JZwE/Aj4bEW8A9wPnA5cAu4Cv9zQts3gMoz7Quk4uRDwQEQsjYmFLS8uA/TCz+nXwreMc\neKuL86Y5NIYrU2hIaqIYGN+NiB8DRMTuiMhHRAH4NsXDT1D8pjC7ZPFZwM4B6nuBSZIa+9RPWlea\nPxHYP5QOmpn1+OW2vQDMdWgMW5azpwQ8CGyJiG+U1GeUNPsosClNrwWWpTOf5gGtwDPAs0BrOlOq\nmeJg+dqICOAJ4Ma0/HLgsZJ1LU/TNwI/T+3NzIbs+dcOArBo3pQq78nYleU6jQ8Cfwe8KOm5VPsi\nxbOfLqF4uOgV4BaAiNgs6RHgJYpnXt0aEXkASbcB64EGYFVEbE7r+zywRtJXgN9SDCnS88OS2il+\nw1g2gr6aWZ1r23GARXOnMHFCU7V3ZcwaNDQi4knKjy2sG2CZu4G7y9TXlVsuIrbTe3irtH4UuGmw\nfTQzG8y+I8fY9Pohbvmz86q9K2NaffwvXzOrey++fojuQvBn75le7V0Z0xwaZlYX/nioeG/umZMn\nVHlPxjaHhpnVhZ0H30aC6WePq/aujGkODTOreYVCcO/P2/mTc8bXzR32ThX/9Mys5v3fLbsBn2pb\nCQ4NM6t5O/a9BcBdN1xU5T0Z+xwaZlY3cv4nhSPm0DAzs8wcGmZmlplDw8xqXrzzn2PbMDk0zKxu\neERj5BwaZmaWmUPDzMwyc2iYmVlmDg0zq3k9t27zZRoj59AwM7PMHBpmZpaZQ8PMzDJzaJhZzfOl\nfZXj0DCzuiFf3jdiDg0zM8vMoWFmZpk5NMzMLLNBQ0PSbElPSNoiabOkz6T6FEkbJG1Lz5NTXZLu\nldQu6QVJC0rWtTy13yZpeUn9MkkvpmXulYqX4PS3DTOzofDFfZWT5ZtGN/C5iLgQWAzcKmk+cDvw\neES0Ao+n1wDXAa3psRK4H4oBANwBXA4sAu4oCYH7U9ue5Zaken/bMDOzKhg0NCJiV0T8Jk0fBrYA\nM4GlwOrUbDVwQ5peCjwURU8BkyTNAK4FNkTE/og4AGwAlqR550TEryMigIf6rKvcNszMrAqGNKYh\naS5wKfA0cG5E7IJisADTU7OZwGsli3Wk2kD1jjJ1BtiGmZlVQebQkHQW8CPgsxHxxkBNy9RiGPXM\nJK2U1CaprbOzcyiLmlkd8J37KidTaEhqohgY342IH6fy7nRoifS8J9U7gNkli88Cdg5Sn1WmPtA2\nThIRD0TEwohY2NLSkqVLZmY2DFnOnhLwILAlIr5RMmst0HMG1HLgsZL6zeksqsXAoXRoaT1wjaTJ\naQD8GmB9mndY0uK0rZv7rKvcNszMrAoaM7T5IPB3wIuSnku1LwJfBR6RtAJ4FbgpzVsHXA+0A28B\nnwSIiP2S7gKeTe2+HBH70/SngO8AE4CfpgcDbMPMzKpg0NCIiCfp/37sV5dpH8Ct/axrFbCqTL0N\nuKhMfV+5bZiZWXX4inAzq3m+uK9yHBpmZpaZQ8PMzDJzaJiZWWYODTMzy8yhYWZ1w3fuGzmHhpmZ\nZebQMDOzzBwaZmaWmUPDzGpepKv7fHHfyDk0zMwsM4eGmZll5tAwM7PMHBpmZpaZQ8PMat6J/3Jb\n3d2oCQ4NMzPLzKFhZmaZOTTMzCwzh4aZ1bw0pIF8dd+IOTTMzCwzh4aZmWXm0DAzs8wcGmZWNzyi\nMXKDhoakVZL2SNpUUrtT0uuSnkuP60vmfUFSu6Stkq4tqS9JtXZJt5fU50l6WtI2ST+Q1Jzq49Lr\n9jR/bqU6bWb1pefiPhu5LN80vgMsKVO/JyIuSY91AJLmA8uA96VlviWpQVIDcB9wHTAf+FhqC/C1\ntK5W4ACwItVXAAci4gLgntTOzMyqaNDQiIhfAPszrm8psCYijkXEy0A7sCg92iNie0QcB9YAS1U8\n/+0q4NG0/GrghpJ1rU7TjwJXy+fLmZlV1UjGNG6T9EI6fDU51WYCr5W06Ui1/upTgYMR0d2nftK6\n0vxDqb2ZmVXJcEPjfuB84BJgF/D1VC/3TSCGUR9oXe8gaaWkNkltnZ2dA+23mdWhwHfuq5RhhUZE\n7I6IfEQUgG9TPPwExW8Ks0uazgJ2DlDfC0yS1NinftK60vyJ9HOYLCIeiIiFEbGwpaVlOF0yM7MM\nhhUakmaUvPwo0HNm1VpgWTrzaR7QCjwDPAu0pjOlmikOlq+N4o17nwBuTMsvBx4rWdfyNH0j8PMI\nnwNhZlZNjYM1kPR94MPANEkdwB3AhyVdQvFw0SvALQARsVnSI8BLQDdwa0Tk03puA9YDDcCqiNic\nNvF5YI2krwC/BR5M9QeBhyW1U/yGsWzEvTUzsxEZNDQi4mNlyg+WqfW0vxu4u0x9HbCuTH07vYe3\nSutHgZsG2z8zs6x8AubI+YpwM6t5PrBdOQ4NMzPLzKFhZmaZOTTMzCwzh4aZmWXm0DCzmudx8Mpx\naJiZWWYODTMzy8yhYWZ1wdf1VYZDw8xqn6/uqxiHhpmZZebQMDOzzBwaZmaWmUPDzOqCx8Erw6Fh\nZjXPw+CV49AwM7PMHBpmZpaZQ8PM6oLv2lcZDg0zq3m+tq9yHBpmZpaZQ8PMzDJzaJiZWWYODTOr\nCx4GrwyHhpnVvPDlfRUzaGhIWiVpj6RNJbUpkjZI2paeJ6e6JN0rqV3SC5IWlCyzPLXfJml5Sf0y\nSS+mZe5VOi+uv22YmVn1ZPmm8R1gSZ/a7cDjEdEKPJ5eA1wHtKbHSuB+KAYAcAdwObAIuKMkBO5P\nbXuWWzLINszMrEoGDY2I+AWwv095KbA6Ta8GbiipPxRFTwGTJM0ArgU2RMT+iDgAbACWpHnnRMSv\nIyKAh/qsq9w2zMyGzNf2VcZwxzTOjYhdAOl5eqrPBF4radeRagPVO8rUB9rGO0haKalNUltnZ+cw\nu2RmtcoX91VOpQfCy2V5DKM+JBHxQEQsjIiFLS0tQ13czMwyGm5o7E6HlkjPe1K9A5hd0m4WsHOQ\n+qwy9YG2YWZmVTLc0FgL9JwBtRx4rKR+czqLajFwKB1aWg9cI2lyGgC/Blif5h2WtDidNXVzn3WV\n24aZmVVJ42ANJH0f+DAwTVIHxbOgvgo8ImkF8CpwU2q+DrgeaAfeAj4JEBH7Jd0FPJvafTkiegbX\nP0XxDK0JwE/TgwG2YWY2ZPLlfRUxaGhExMf6mXV1mbYB3NrPelYBq8rU24CLytT3lduGmdlQeRy8\ncnxFuJmZZebQMDOzzBwaZlYfPKRREQ4NMzPLzKFhZjXPV4RXjkPDzMwyc2iYWV3wkEZlODTMzCwz\nh4aZ1Tzfua9yHBpmZpaZQ8PMzDJzaJhZXfCd+yrDoWFmZpk5NMys9nkcvGIcGmZmlplDw8zqgm/C\nVBkODTMzy8yhYWY1z0MalePQMDOzzBwaZmaWmUPDzOqCL+6rDIeGmZll5tAws5oXvnVfxYwoNCS9\nIulFSc9Jaku1KZI2SNqWnienuiTdK6ld0guSFpSsZ3lqv03S8pL6ZWn97WlZf8E0M6uiSnzT+POI\nuCQiFqbXtwOPR0Qr8Hh6DXAd0JoeK4H7oRgywB3A5cAi4I6eoEltVpYst6QC+2tmdch/cVbGqTg8\ntRRYnaZXAzeU1B+KoqeASZJmANcCGyJif0QcADYAS9K8cyLi11H8bvlQybrMzKwKRhoaAfxM0kZJ\nK1Pt3IjYBZCep6f6TOC1kmU7Um2gekeZupnZkHhIo3IaR7j8ByNip6TpwAZJvxugbblvhzGM+jtX\nXAyslQBz5swZeI/NzGzYRvRNIyJ2puc9wE8ojknsToeWSM97UvMOYHbJ4rOAnYPUZ5Wpl9uPByJi\nYUQsbGlpGUmXzMxsAMMODUlnSjq7Zxq4BtgErAV6zoBaDjyWptcCN6ezqBYDh9Lhq/XANZImpwHw\na4D1ad5hSYvTWVM3l6zLzGxIfPJlZYzk8NS5wE/SG9EIfC8i/o+kZ4FHJK0AXgVuSu3XAdcD7cBb\nwCcBImK/pLuAZ1O7L0fE/jT9KeA7wATgp+lhZmZVMuzQiIjtwAfK1PcBV5epB3BrP+taBawqU28D\nLhruPpqZgf/LbSX5inAzM8vMoWFmdcEjGpXh0DAzs8wcGmZmlplDw8xqnq8IrxyHhpmZZebQMLP6\n4JHwinBomJlZZg4NM6t54cv7KsahYWZmmTk0zKwueEijMhwaZmaWmUPDzMwyc2iYWc3zxX2V49Aw\nM7PMHBpmVhd8577KcGiYmVlmI7ndq5lZ1UQEhYB8IeguFOjqDo7l83Tlg67uAl35Ase6i4/dbxyt\n9u7WDIeGWQ3rzhd4Ymsn+988xpvH8hztzlMoBPkC5COK0z3PpdNRbFMoBIUorffWCqlNRM9rKEQQ\n6bmnFiXzerdHWr533T0B0FMvlIRC7z4V198zPRQzJ004RT/l+uLQMKthT7+8n//0UFu/83OChpzI\nSTTkRINELqeSGuRUMj8ncuLEa0kn1tEznUvPJ17ncuQkVLJc6TpyabvFdXBiuqdeXIdOqudOtMvR\nkIOmhlzx0ZijuUE0N+ZozOVobswxrrH4PHfqmafxJ1+7HBpmNeyNt7sAeHjFIi6eOYlxTbmTPrg9\nOGxD5dAwq2FHu/MAzJp8BhPPaKry3lgtcGiYnQY9x/W7CwXyhaArHycGcPOFoDsfdBeCfKFAd3pd\nnB9054tt3u7K89bxPG935TnWled4vjivK1/geD7oyhfoSgO/x7sLHM8X2N55BIBxjT5R0irDoVEn\n+g4k9jtQedJAZumgZ88gZ+mgZrmBz9LlBll3yQBo6fyewdGI3gHb6Bk0LRkIPTGwWuhdPl+yvhOD\nqT2DrSX9eecyxf7kS7ZTKJkuHbDtLryzXvohX4jeD/qeed1DHLQdjuaGHE0NYlxTA80NvcfzP/yn\nLbScPe6Ub9/qw6gPDUlLgG8CDcA/RsRXsyxXKASHj3Xzxttd7D1yjOPdheKpePniX2Bd+eJfY28d\nz3O0q3iaXrkPmnzpWR59zuzIF06ef3K7ch/MvR9MJ3+YcuJD8aS2ZT+0OenDse+ZK30/hHva1YOe\nQdTSgdJcySBvrmTQNieRy6U26h10laCxoWRAOD03N+ZODAT3DMg2NhSXbcz1Dsg25HLpde+jMSca\nG3rrjf3VG4rraerzumf++KYGzmhuYEJTA+ObGmhuLIZEU1qHxyfsdBjVoSGpAbgP+AjQATwraW1E\nvNTfMr/742Hef+d6jhzrHvH/m+k9m4STziop/UApns3R++HTe4ZJsd5z5knvWSU9H0wnn1FyYn7u\nnW17z1QZetu+Z5/0nhlDWqbcGS+l83s/ZKWT+3PSsrneZRv6zs/1v+7eM3MAypxZU+bD/aQPfg/q\nmp1Wozo0gEVAe0RsB5C0BlgK9BsaZ45r4G8WzOKcCU1MnNDEOeMbmXpWM+MbG2hqTKflNSh9lc9x\nRnMD45sbaMrlTnzI93y4mpnZyUZ7aMwEXit53QFc3reRpJXASoA5c+Zw51+97/TsnZlZnRntp1SU\n+3P/HQedIuKBiFgYEQtbWlpOw26ZmdWn0R4aHcDsktezgJ1V2hczs7o32kPjWaBV0jxJzcAyYG2V\n98nMrG6N6jGNiOiWdBuwnuIpt6siYnOVd8vMrG6N6tAAiIh1wLpq74eZmY3+w1NmZjaKODTMzCwz\nh4aZmWWmGOn/2hhlJB0GtlZ7P06zacDeau/EaeY+1wf3+fR5d0QMeqHbqB8IH4atEbGw2jtxOklq\nc59rn/tcH0Z7n314yszMMnNomJlZZrUYGg9UeweqwH2uD+5zfRjVfa65gXAzMzt1avGbhpmZnSI1\nExqSlkjaKqld0u3V3p9KkvSKpBclPSepLdWmSNogaVt6npzqknRv+jm8IGlBdfc+G0mrJO2RtKmk\nNuQ+Slqe2m+TtLwafcmqnz7fKen19F4/J+n6knlfSH3eKunakvqY+d2XNFvSE5K2SNos6TOpXrPv\n9QB9HpvvdaT7VY/lB8V/ZvgH4DygGXgemF/t/apg/14BpvWp/Xfg9jR9O/C1NH098FOK9yJZDDxd\n7f3P2McrgQXApuH2EZgCbE/Pk9P05Gr3bYh9vhP4L2Xazk+/1+OAeen3vWGs/e4DM4AFafps4Pep\nbzX7Xg/Q5zH5XtfKN40Tt4WNiONAz21ha9lSYHWaXg3cUFJ/KIqeAiZJmlGNHRyKiPgFsL9Peah9\nvBbYEBH7I+IAsAFYcur3fnj66XN/lgJrIuJYRLwMtFP8vR9Tv/sRsSsifpOmDwNbKN6hs2bf6wH6\n3J9R/V7XSmiUuy3sQG/KWBPAzyRtTLe2BTg3InZB8ZcSmJ7qtfSzGGofa6Xvt6VDMat6DtNQg32W\nNBe4FHiaOnmv+/QZxuB7XSuhkem2sGPYByNiAXAdcKukKwdoW+s/C+i/j7XQ9/uB84FLgF3A11O9\npvos6SzgR8BnI+KNgZqWqY3Jfpfp85h8r2slNGr6trARsTM97wF+QvFr6u6ew07peU9qXks/i6H2\nccz3PSJ2R0Q+IgrAtym+11BDfZbURPHD87sR8eNUrun3ulyfx+p7XSuhUbO3hZV0pqSze6aBa4BN\nFPvXc8bIcuCxNL0WuDmddbIYONTztX8MGmof1wPXSJqcvupfk2pjRp/xp49SfK+h2OdlksZJmge0\nAs8wxn73JQl4ENgSEd8omVWz73V/fR6z73W1zyyo1IPiWRa/p3h2wZeqvT8V7Nd5FM+SeB7Y3NM3\nYCrwOLAtPU9JdQH3pZ/Di8DCavchYz+/T/ErehfFv6hWDKePwH+kOHDYDnyy2v0aRp8fTn16geIH\nwoyS9l9Kfd4KXFdSHzO/+8CHKB5SeQF4Lj2ur+X3eoA+j8n32leEm5lZZrVyeMrMzE4Dh4aZmWXm\n0DAzs8wcGmZmlplDw8zMMnNomJlZZg4NMzPLzKFhZmaZ/X/ylePKLOzCvwAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2eb9e92dd30>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pd.Series(forest[forest.iloc[:,-1]!='normal'].index).plot()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "forest = pd.read_csv(f_forest,header=None)\n",
+    "classes = forest.iloc[:,-1].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "forest_init = forest[:3000*20]\n",
     "forest_online = forest[3000*20:]"
    ]
@@ -859,7 +1130,9 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "classlabel_init = classlabel[:3000*20]\n",
@@ -1024,7 +1297,9 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
