--- a/Thesis/referenzen.bib
+++ b/Thesis/referenzen.bib
@@ -95,8 +95,9 @@
 }
 
 @article{adam,
-	author={Max Kochurov and Timur Garipov and Dmitry Podoprikhin and Dmitry Molchanov and Arsenii Ashukha and DmitryVetrov},
-	title = {BAYESIAN INCREMENTAL LEARNING FOR DEEP NEURAL NETWORKS}
-
+	author={Diederik P Kingma and Jimmy Lei Ba},
+	title={ADAM A METHOD FOR STOCHASTIC OPTIMIZATION},
+	year={2017}
 }
+
 
